# CSC15003-CA-Simulation

./: .gitignore  CMakeLists.txt  MHUD_SQLite.sql  README.md  README.txt  build.bat  precheck.bat  run_client.bat  run_server.bat
Certificate_Authority/: CA.cpp  CA.h  Certificate_Authority.sln  Certificate_Authority.vcxproj  Certificate_Authority.vcxproj.filters  KeyGen.cpp  main.cpp
Certificate_Authority/SQLite_Database/: MHUD_SQLite.sql
Certificate_Authority/x64/Debug/: vc143.idb
Certificate_Authority/x64/Debug/Certific.dc87f321.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Certificate_Authority.lastbuildstate
Key-gen/: KeyGen.cpp  KeyGen.h
SQLite_Database/: MHUD.db  databaseFunc.cpp  databaseFunc.h  schema.sql
TESTMAIN/: TESTMAIN.sln
TESTMAIN/TESTMAIN/: TESTMAIN.vcxproj  TESTMAIN.vcxproj.filters  main.cpp  my_key.p12
include/: auth_system.h  common.h
source/include/: certificate_authority.h  client_console.h  database.h  openssl_wrapper.h  server_console.h  server_handler.h
source/src/: auth_system.cpp  client_main.cpp  database.cpp  main.cpp  openssl_wrapper.cpp  server_handler.cpp
src/: certificate_authority.cpp  client_console.cpp  placeholder.cpp  server_console.cpp  socket_comm.cpp
